--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,23 +2,12 @@
 
 #app {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
   font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 /* @media (min-width: 1024px) {
